Frontend - Fixing alignment in light a candle button component

--- a/frontend/components/LightACandleLink.module.scss
+++ b/frontend/components/LightACandleLink.module.scss
@@ -10,6 +10,7 @@
     cursor: pointer;
     display: flex;
     flex-wrap: wrap;
+    margin: 0 auto;
   
     span {
         width: 100%;
